[tool.poetry]
name = "matrix-loading-programs"
version = "0.1.0"
description = "Exercise 1 for The Matrix subject"
authors = ["student <student@example.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
pandas = ">=2.0.0"
numpy = ">=1.24.0"
matplotlib = ">=3.7.0"
requests = ">=2.31.0"

[build-system]
requires = ["poetry-core>=1.5.0"]
build-backend = "poetry.core.masonry.api"
